fixed images overflowing bug in FF

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -7,6 +7,7 @@
 .app-content
   width: 100%
   max-width: 500px
+  margin: auto
 
   form
     padding: 15px
